--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,17 @@
 
   <body>
 
-    <div ui-view></div>
+    <div class="container wrap">
+      <div class="row">
+        <div class="col-xs-12">
+          <header>
+            <div class="well">
+              Notely
+            </div>
+          </header>
+      </div>
+      <div ui-view></div>
+    </div>
 
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
