--- a/client/app/index.html
+++ b/client/app/index.html
@@ -34,8 +34,10 @@
     <script src="/bower_components/angular-loader/angular-loader.min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+
     <script src="/app.js"></script>
     <script src="/notes/notes.js"></script>
+    <script src="/services/notes-service.js"></script>
 
   </body>
 
