--- a/client/app/notes/notes.html
+++ b/client/app/notes/notes.html
@@ -9,8 +9,9 @@
                 </button> 
 
                 <ul id = "notes" >
-                    <li>Test Note 1</li>
-                    <li>Test Note 2</li>
+
+                    <li ng-repeat = "note in notes" > {{ note.title }} </li>
+
                 </ul>
                          
         </nav>
