added some functionality to the submission form

--- a/client/app/notes/notes-form.html
+++ b/client/app/notes/notes-form.html
@@ -3,6 +3,7 @@
     <p>
 
         <input
+            ng-model = "note.title"
             type = "text"
             name = "title"
             id = "note_title"
@@ -14,6 +15,7 @@
     <p>
 
         <textarea 
+            ng-model = "note.body_html"
             name = "body_html"
             placeholder = "Just start typing..."
         ></textarea>
