--- a/client/app/notes/notes-form.html
+++ b/client/app/notes/notes-form.html
@@ -1,36 +1,24 @@
-<form>
-
-    <p>
-
-        <input
-            ng-model = "note.title"
-            type = "text"
-            name = "title"
-            id = "note_title"
-            placeholder = "Title your note."
-        >
-
-    </p>
-
-    <p>
-
-        <textarea 
-            ng-model = "note.body_html"
-            name = "body_html"
-            placeholder = "Just start typing..."
-        ></textarea>
-
-    </p>
-
-    <div class = "form-actions" >
-        
-        <input
-            type = "submit"
-            name = "commit"
-            value = "Save"
-            class = "btn btn-default"
-        >
-
-    </div>
-
+<form ng-submit = "save()">
+  <p>
+    <input
+      ng-model="note.title"
+      type="text"
+      name="title"
+      id="note_title"
+      placeholder="Title your note">
+  </p>
+  <p>
+    <textarea
+      ng-model="note.body_html"
+      name="body_html"
+      placeholder="Just start typing..."
+      ></textarea>
+  </p>
+  <div class="form-actions">
+    <input
+      type="submit"
+      name="commit"
+      value="Save"
+      class="btn btn-default">
+  </div>
 </form>
