--- a/client/app/notes/notes.html
+++ b/client/app/notes/notes.html
@@ -4,7 +4,10 @@
   
         <nav class = "col-xs-4" id = "sidebar" >
             
-                <button class = "new-note btn btn-default" >
+                <button 
+                    class = "new-note btn btn-default" 
+                    ng-click = "clearForm()" 
+                >
                    New Note
                 </button> 
 
