fixed the new note button

--- a/client/app/notes/notes.html
+++ b/client/app/notes/notes.html
@@ -6,6 +6,7 @@
             
                 <button 
                     class = "new-note btn btn-default" 
+                    ui-sref = "notes.form( { noteId: undefined } )",
                     ng-click = "clearForm()" 
                 >
                    New Note
