--- a/client/app/notes/notes.html
+++ b/client/app/notes/notes.html
@@ -14,7 +14,7 @@
 
                 <ul id = "notes" >
 
-                    <li ng-repeat = "note in notes" > 
+                    <li ng-repeat = "note in notes | orderBy: '-updated_at'" > 
                         
                         <a ui-sref = "notes.form( { noteId: note._id } )">{{ note.title }}</a>
                     
